<resources>
    <string name="app_name">Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edtUserName">User Name</string>
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="edtName">Name</string>
    <string name="edtAddress">Address</string>
    <string name="edtMobile">Mobile</string>
    <string name="btnSignUp">SignUp</string>
</resources>
